# cleanshell

./: CMakeLists.txt
include/ankh/lang/: env.h  expr.h  interpreter.h  lambda.h  program.h  resolution_table.h  resolver.h  statement.h
src/: ankh.cc
src/lang/: interpreter.cc  parser.cc  resolver.cc
test/: interpreter_tests.cc  parser_tests.cc
