CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(ankh VERSION 1.0.0)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_EXPORT_COMPILE_COMMANDS 1)

if (WIN32) 
    SET(CMAKE_CXX_WARNING_FLAGS "/W3")
else() 
    SET(CMAKE_CXX_WARNING_FLAGS "-Wall -Wextra -Wpedantic")
endif()

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_WARNING_FLAGS}")

SET(APP_EXE ankhsh)
SET(APP_LIB ankh)
SET(APP_SOURCES 
    src/ankh.cc 
    src/lang/lexer.cc 
    src/lang/token.cc 
    src/lang/parser.cc
    src/lang/expr.cc
    src/lang/interpreter.cc
    src/lang/resolver.cc
    src/pkg/path.cc
)

SET(FMT_LIB fmt)
SET(FMT_SOURCES
    src/fmt/format.cc
    src/fmt/os.cc
)

ADD_LIBRARY(${APP_LIB} STATIC ${APP_SOURCES})
ADD_LIBRARY(${FMT_LIB} STATIC ${FMT_SOURCES})
ADD_EXECUTABLE(${APP_EXE} src/main.cc)

TARGET_INCLUDE_DIRECTORIES(${APP_EXE} PRIVATE ${CMAKE_SOURCE_DIR}/include)
TARGET_INCLUDE_DIRECTORIES(${APP_LIB} PRIVATE ${CMAKE_SOURCE_DIR}/include)
TARGET_INCLUDE_DIRECTORIES(${FMT_LIB} PRIVATE ${CMAKE_SOURCE_DIR}/include)

TARGET_LINK_LIBRARIES(${APP_EXE} ${APP_LIB} ${FMT_LIB})

# tests
ADD_SUBDIRECTORY(test)
